[package]
name = "cryptowarpio_getdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
polars = {version = "0.23.2", features = ["json"]}
reqwest = "0.11.11"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }